@@ -239,6 +239,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\gtk\gtkmm\border.cc"
+				>
+			</File>
+			<File
 				RelativePath="..\..\gtk\gtkmm\box.cc"
 				>
 			</File>
@@ -958,6 +962,10 @@
 			</File>
 			<File
 				RelativePath="..\..\gtk\gtkmm\bin.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\gtk\gtkmm\border.h"
 				>
 			</File>
 			<File
