@@ -26,6 +26,7 @@
 #include <gtkmm/entrycompletion.h>
 #include <gtkmm/adjustment.h>
 #include <gtkmm/image.h> //For ImageType.
+#include <gtkmm/border.h>
 
 _DEFS(gtkmm,gtk)
 _PINCLUDE(gtkmm/private/widget_p.h)
@@ -34,9 +35,6 @@ namespace Gtk
 {
 
 _WRAP_ENUM(EntryIconPosition, GtkEntryIconPosition)
-
-//TODO: This is used in Range too, so put it somewhere more appropriate:
-typedef GtkBorder Border;
 
 /** A single line text entry field.
  *
