@@ -1,3 +1,15 @@
+2009-12-11  Krzesimir Nowak  <qdlacz@gmail.com>
+
+	* gtk/src/border.[hg|ccg]: Wrapped GtkBorder.
+	* gtk/src/entry.hg: Removed a TODO and typedef and included border.h.
+	* gtk/src/range.[hg|ccg]: Made get_range_border vfunc use Gtk::Border&
+	instead of GtkBorder* - this needed wrapping it partially by hand by
+	writing custom C callback.
+	* tools/m4/convert_gtk.m4: Added conversion macros for Gtk::Border.
+	* gtk/gtkmm.h: Added border.h include.
+	* MSVC_Net{2005,2008}/gtkmm/gtkmm.vcproj: Added border.h and border.cc
+	to build.
+
 2009-05-05  Murray Cumming  <murrayc@murrayc.com>
 
 	* gdk/gdkmm/general.[h|cc]:
